--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "@sekai-lab",
+  "name": "@sekai-labs/monorepo",
   "version": "0.0.0",
   "description": "The Monorepo contain utils and packages for sekai labs",
   "repository": "https://github.com/sekai-labs/sekai",
   "author": "@AnataAria",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "scripts": {
     "build": "tsc"
   },
-  "workspaces":[
+  "workspaces": [
     "packages/*"
   ],
   "resolutions": {
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "eslint": "^9.8.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "prettier": "^3.3.3"
   }
 }
