--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -13,6 +13,7 @@
     "joi": "^17.13.3",
     "knex": "^3.1.0",
     "node": "^20.16.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "redis": "^4.7.0"
   }
 }
