--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Build Package
         run: yarn
       - name: Publish Package
-        run: yarn publish --provenance --access public
+        run: yarn publish::framework
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       
