--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.0",
   "description": "Framework for sekai-lab written by typescripts",
   "main": "src/index.ts",
+  "types": "src/index.d.ts",
   "repository": "https://github.com/sekai-labs/sekai",
   "author": "@AnataAria",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "tsc",
+    "prepare": "yarn build",
+    "publish": "yarn publish --provenance --access public"
+  },
   "dependencies": {
     "@types/node": "^22.0.0",
     "dotenv": "^16.4.5",
