--- a/.github/workflows/publish-package.yaml
+++ b/.github/workflows/publish-package.yaml
@@ -2,7 +2,9 @@ name: Publish Package
 on:
   release:
     types: [published]
-
+  pull_request: 
+    branches: 
+      - main
 jobs:
   publish-package:
     runs-on: ubuntu-latest
