--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sekai-labs/framework",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Framework for sekai-lab written by typescripts",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
@@ -17,6 +17,7 @@
     "publish": "yarn publish"
   },
   "dependencies": {
+    "@redis/graph": "^1.1.1",
     "@types/node": "^22.0.0",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
