--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sekai-labs/framework",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Framework for sekai-lab written by typescripts",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
@@ -11,10 +11,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "./build/"
+  ],
   "scripts": {
     "build": "tsc",
-    "prepare": "yarn build",
-    "publish": "yarn publish"
+    "prepare": "yarn build"
   },
   "dependencies": {
     "@redis/graph": "^1.1.1",
