remove src folder when publish

--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sekai-labs/framework",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Framework for sekai-lab written by typescripts",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
@@ -9,11 +9,11 @@
   "license": "MIT",
   "private": false,
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "ignore": [
+      "src/"
+    ]
   },
-  "files": [
-    "./build/"
-  ],
   "scripts": {
     "build": "tsc",
     "prepare": "yarn build"
