--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,23 +1,40 @@
 {
   "name": "@sekai-labs/framework",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Framework for sekai-lab written by typescripts",
-  "main": "src/index.ts",
-  "types": "src/index.d.ts",
-  "repository": "https://github.com/sekai-labs/sekai",
+  "type": "module",
+  "module": "./build/src/index.js",
+  "main": "./build/src/index.js",
+  "types": "./build/src/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sekai-labs/sekai",
+    "directory": "packages/framework"
+  },
   "author": "@AnataAria",
   "license": "MIT",
   "private": false,
+  "files": [
+    "build/"
+  ],
   "publishConfig": {
-    "access": "public",
-    "ignore": [
-      "src/"
-    ]
+    "access": "public"
   },
   "scripts": {
     "build": "tsc",
     "prepare": "yarn build"
   },
+  "exports": {
+    ".": {
+      "types": "./build/src/index.d.ts",
+      "import": "./build/src/index.js"
+    }
+  },
+  "keywords": [
+    "sekai",
+    "sekai-labs",
+    "@sekai-labs/sekai"
+  ],
   "dependencies": {
     "@redis/graph": "^1.1.1",
     "@types/node": "^22.0.0",
