--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sekai-labs/framework",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Framework for sekai-lab written by typescripts",
   "type": "module",
   "module": "./build/src/index.js",
@@ -44,5 +44,9 @@
     "node": "^20.16.0",
     "pg": "^8.12.0",
     "redis": "^4.7.0"
+  },
+  "peerDependencies": {
+    "joi": "17.x",
+    "knex": "3.x"
   }
 }
